--- a/style.css
+++ b/style.css
@@ -1,99 +1,149 @@
 html {
-    box-sizing: border-box;
-    font-size: 10px;
-    background: #8E24AA;
-    background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
-    background-image: url('mountain.jpg');
-    background-repeat:no-repeat;
-    background-position: center center;
-  }
-  
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    margin:0;
-    text-align: center;
-    font-family: 'Inconsolata', monospace;
-  }
-  
-  .display__time-left {
-    font-weight: 100;
-    font-size: 20rem;
-    margin: 0;
-    color:white;
-    text-shadow:4px 4px 0 rgba(0,0,0,0.05);
-  }
-  
-  .timer {
-    display:flex;
-    min-height: 100vh;
-    flex-direction:column;
-  }
-  
-  .timer__controls {
-    display: flex;
-  }
-  
-  .timer__controls > * {
-    flex:1;
-  }
-  
-  .timer__controls form {
-    flex:1;
-    display:flex;
-  }
-  
-  .timer__controls input {
-    flex:1;
-    border:0;
-    padding:2rem;
-  }
-  
-  .timer__button {
-    background:none;
-    border:0;
-    cursor: pointer;
-    color:white;
-    font-size: 2rem;
-    text-transform: uppercase;
-    background:rgba(0,0,0,0.1);
-    border-bottom:3px solid rgba(0,0,0,0.2);
-    border-right:1px solid rgba(0,0,0,0.2);
-    padding:1rem;
-    font-family: 'Inconsolata', monospace;
-  }
-  
-  .timer__button:hover,
-  .timer__button:focus {
-    background:rgba(0,0,0,0.2);
-    outline:0;
-  }
-  
-  .display {
-    flex:1;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .display__end-time {
-    font-size: 4rem;
-    color:white;
-  }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 10px;
+  background: #8E24AA;
+  background: -webkit-linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
+  background: -o-linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
+  background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
+  background-image: url('zazen-wp.jpg');
+  background-repeat:no-repeat;
+  background-position: center center;
+}
 
-  #title{
-    font-family: 'Dancing Script', cursive;
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body {
+  margin:0;
+  text-align: center;
+  font-family: 'Inconsolata', monospace;
+}
+
+.display__time-left {
+  font-weight: 200;
+  font-size: 6rem;
+  margin: 0 0 10px;
+  color:white;
+  text-shadow:4px 4px 0 rgba(0,0,0,0.05);
+}
+
+.timer {
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  min-height: 100vh;
+  -webkit-box-orient:vertical;
+  -webkit-box-direction:normal;
+      -ms-flex-direction:column;
+          flex-direction:column;
+}
+
+.timer__controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.timer__controls > * {
+  -webkit-box-flex:1;
+      -ms-flex:1;
+          flex:1;
+}
+
+.timer__controls form {
+  -webkit-box-flex:1;
+      -ms-flex:1;
+          flex:1;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+}
+
+.timer__controls input {
+  -webkit-box-flex:1;
+      -ms-flex:1;
+          flex:1;
+  border:0;
+  padding:2rem;
+}
+
+.timer__button {
+  background:none;
+  border:0;
+  cursor: pointer;
+  color:white;
+  font-size: 2rem;
+  text-transform: uppercase;
+  background:rgba(0,0,0,0.1);
+  border-bottom:3px solid rgba(0,0,0,0.2);
+  border-right:1px solid rgba(0,0,0,0.2);
+  padding:1rem;
+  font-family: 'Inconsolata', monospace;
+}
+
+.timer__button:hover,
+.timer__button:focus {
+  background:rgba(0,0,0,0.2);
+  outline:0;
+}
+
+.display {
+  -webkit-box-flex:1;
+      -ms-flex:1;
+          flex:1;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.display__end-time {
+  font-size: 4rem;
+  color:white;
+}
+
+#title{
+  font-family: 'Dancing Script', cursive;
+  color: white;
+  font-size: 40px;
+}
+
+#stop{
+    opacity: 0;
+    margin-bottom: 8px;
     color: white;
-    font-size: 80px;
-  }
+    background-color: #5E808C;
+    border: none;
+    -webkit-box-shadow: 0px 0px 0px 2px #5E808C;
+            box-shadow: 0px 0px 0px 2px #5E808C;
+    cursor:pointer;
+    font-family: cursive;
+    font-size:19px;
+    border-radius:10px;
 
-  #stop{
-      opacity: 0;
-  }
+}
 
-  #pause{
-      opacity: 0;
-  }
+#pause{
+    opacity: 0;
+    color: white;
+    background-color: #5E808C;
+    border: none;
+    -webkit-box-shadow: 0px 0px 0px 2px #5E808C;
+            box-shadow: 0px 0px 0px 2px #5E808C;
+    cursor:pointer;
+    font-family: cursive;
+    font-size:19px;
+    border-radius:10px;
+}
