--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Style adapted from Wes Bos */
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -6,7 +8,7 @@ html {
   background: -webkit-linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
   background: -o-linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
   background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
-  background-image: url('zazen-wp.jpg');
+  background-image: url('https://raw.githubusercontent.com/YuriRocha/tarotPictures/master/zazen-wp.jpg');
   background-repeat:no-repeat;
   background-position: center center;
 }
